fix: refactor code smell ExcessiveParameterList unsing Introduce Parameter Object refactoring technique